# metaphoric-chatbot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  convert_books_to_markdown.py  dev.sh
.playwright-mcp/: page-2026-04-19T01-18-21-098Z.yml  page-2026-04-19T01-21-15-920Z.yml  page-2026-04-19T01-24-18-552Z.yml  page-2026-04-19T01-40-56-395Z.yml  page-2026-04-19T01-41-04-672Z.yml  page-2026-04-19T01-51-21-099Z.yml  page-2026-04-19T01-55-01-646Z.yml  page-2026-04-19T01-57-06-549Z.yml
agent_service/: pyproject.toml
agent_service/app/: agents.py  config.py  db.py  main.py  models.py  orchestrator.py  prompts.py  repository.py  schemas.py  state_machine.py
agent_service/app/providers/: base.py  groq_provider.py  local_provider.py  nvidia_provider.py
agent_service/tests/: test_api_flow.py  test_config.py  test_repository.py  test_state_machine.py
markdown/: Frogs into Princes_ Neuro Linguistic Progr - Richard Wayne Bandler.md  HYPNOTHERAPY Methods, Techniques  Philosophies (JACQUIN, FREDDY [JACQUIN, FREDDY]) (z-library.sk, 1lib.sk, z-lib.sk).md  How To Analyze People_ 13 Laws About the M - Daniel Spade.md  How to Make Money Online with ChatGPT_ The - Fitzgerald, Brian Scott.md  Hypnosis and Hypnotherapy Basic to Advanced Techniques for the Professional (Calvin D. Banyan, Gerald F. Kein) (z-library.sk, 1lib.sk, z-lib.sk).md  Hypnosis_ Attracting Your Success- Mind Co - Price, Victoria.md  Manipulation Techniques_ How to understand - Moore, David Cliff.md  Modeling With NLP (Robert Dilts) (Z-Librar - Unknown.md  NLP - Tom Hoobyar.md  (+13 more)
(+56 files in other folders)
