[project]
name = "metaphoric-chatbot-agent-service"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "sqlalchemy==2.0.40",
  "pydantic==2.11.3",
  "deepagents",
  "langchain",
  "langchain-groq",
  "langgraph",
  "langchain-nvidia-ai-endpoints>=1.2.1",
]

[project.optional-dependencies]
test = [
  "pytest==8.3.5",
  "httpx==0.28.1"
]
lint = [
  "ruff==0.11.8"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["app", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP"
]
ignore = ["B008"]
